package mangaplus;
syntax = "proto3";

message Title_detailV3{
    message Parent{
        message Data{
            message Manga{
                int32 id = 1;
                string title = 2;
                string author = 3;
                string portrait_thumbnail = 4;
                string landscape_thumbnail = 5;
                int32 views = 6;
            }

            Manga manga = 1;
            string title_thumbnail_main = 2;
            string description = 3;
            string background = 4;
            int32 next_chapter_date = 5;
            string update_description = 7;

            message Share{
                string hashtag = 1;
                string url = 2;
            }

            Share share = 13;
            bool is_simul_release = 14;
            enum Rating {
                ALLAGE = 0;
                TEEN = 1;
                TEENPLUS = 2;
                MATURE = 3;
            }
            Rating rating = 16;
            int32 views = 18;
 
            message Banner{
                string image = 1;
                message Links{
                    string link = 2;
                }

                Links links = 2;
                int32 id = 3;
            }

            Banner banner = 20;

            enum Language {
              ENGLISH = 0;
              SPANISH = 1;
              FRENCH = 2;
              INDONESIAN = 3;
              PORTUGUESE = 4;
              RUSSIAN = 5;
              THAI = 6;
              GERMAN = 7;
              VIETNAM = 9;
            }

            message Languages{
                int32 manga_id = 1;
                Language language = 2;
            }

            repeated Languages languages = 27;

            message Chapters{
                string unknown = 1;

                message Details{
                    int32 manga_id = 1;
                    int32 chapter_id = 2;
                    string chapter = 3;
                    string title = 4;
                    string thumbnail = 5;
                    int32 release_date = 6;
                    int32 expiration_date = 7;
                }

                repeated Details free_initial_chapters = 2;
                repeated Details app_exclusive_chapters = 3;
                repeated Details free_latest_chapters = 4;
            }

            repeated Chapters chapters = 28;
            string region_code = 30;
        }

        Data data = 8;
    }
    
    Parent parent = 1;
}

